[package]
name = "alice-queue"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Deterministic Zero-Copy Message Log - Optimized Edition"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-Queue"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
memmap2 = "0.9"
blake3 = "1.5"
